--- a/app/scss/_content.scss
+++ b/app/scss/_content.scss
@@ -23,10 +23,10 @@
                 align-items: flex-start;
                 padding-bottom: 1.5rem;
                 .reward{
-                    margin-top: 1.5rem;
+                    margin-top: 10px;
                 }
                 .price_left{
-                    margin-top: 24px;
+                    margin-top: 10px;
                 }
             }
         }
@@ -59,7 +59,6 @@
         .tagline {
             margin-top: 0.5rem;
             text-align: center;
-            color: $darkGray;
         }
         .forlogo {
             height: 64px;
@@ -72,12 +71,10 @@
 
         .backproject {
             width: 210px;
-            // color: white;
         }
         .bookmark {
             background-color: #f4f8f9;
-            color: $DarkCyan;
-            .circle {
+            .bookmarkicon {
                 justify-self: flex-start;
                 width: 56px;
                 height: 56px;
@@ -87,29 +84,61 @@
             p {
                 width: calc(100% - 56px);
                 text-align: center;
-                @include breakpoint(vsmall) {
+                @include breakpoint(phone) {
                     display: none;
                 }
             }
-            @include breakpoint(vsmall) {
+            @include breakpoint(phone) {
                 width: 56px !important;
             }
         }
     }
     .box2 {
         min-height: 12rem;
+        margin-bottom: 1.5rem;
+        &__head{
+            // min-height:7.5rem;
+            width: 100%;
+            @include breakpoint(phone){
+                flex-direction: column;
+                align-items: center;
+            }
+            &main{
+                width: 32%;
+                border-right: 1px solid #D9D9D9;
+                @include breakpoint(phone){
+                    width: unset;
+                    min-height: 6rem;
+                    border-right: none;
+                    border-bottom: 1px solid #D9D9D9;
+                }
+                span{
+                    display: block;
+                    width: 100%;
+                    font-size: 2rem;
+                    font-weight: 700;
+                    line-height: 1;
+                }
+            }
+        }
+        .progressbar{
+            height: 8px;
+            width: 100%;
+            border-radius: 4px;
+            .progressfill{
+                background-color: $DarkCyan;
+            }
+        }
     }
     .box3 {
         min-height: 74.75rem;
         padding-top: 40px;
         padding-bottom: 40px;
-        margin-top: 24px;
         @include breakpoint(vsmall){
             padding-top:2rem;
             padding-bottom:2rem;
         }
         .para {
-            color: #7a7a7a;
             line-height: 2;           
             margin-top:2rem;       
         }
@@ -135,6 +164,7 @@
             .pledge {
                 color: $DarkCyan;
                 font-weight: 700;
+                cursor: pointer;
             }
             .price {
                 font-weight: 700;
@@ -147,10 +177,18 @@
             }
         }
         .disabled {
-            opacity: 0.4;
             .button {
                 background-color: $darkGray;
+                &:hover{
+                    opacity: 1;
+                }
+            }
+            .pledge{
+                cursor: text;
             }
         }
     }
+}
+.disabled{
+    opacity: 0.4;
 }
