--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -100,7 +100,7 @@ a:visited {
 }
 
 p {
-  color: #7a7a7a;
+  color: #383838;
   font-size: 15px;
 }
 
@@ -111,7 +111,7 @@ p {
 .header {
   height: 25rem;
   width: 100%;
-  background-image: url(/images/image-hero-desktop.jpg);
+  background-image: url(../../images/image-hero-desktop.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -119,7 +119,7 @@ p {
 
 @media (max-width: 37.5em) {
   .header {
-    background-image: url(/images/image-hero-mobile.jpg);
+    background-image: url(../../images/image-hero-mobile.jpg);
   }
 }
 
@@ -155,7 +155,7 @@ p {
 }
 
 .header .navbar a {
-  font-size: 0.825rem;
+  font-size: 1rem;
   font-weight: 500;
 }
 
@@ -234,10 +234,10 @@ p {
     padding-bottom: 1.5rem;
   }
   .content .box .boxend2 .reward {
-    margin-top: 1.5rem;
+    margin-top: 10px;
   }
   .content .box .boxend2 .price_left {
-    margin-top: 24px;
+    margin-top: 10px;
   }
 }
 
@@ -273,7 +273,6 @@ p {
 .content .box1 .tagline {
   margin-top: 0.5rem;
   text-align: center;
-  color: #7a7a7a;
 }
 
 .content .box1 .forlogo {
@@ -293,10 +292,9 @@ p {
 
 .content .box1 .bookmark {
   background-color: #f4f8f9;
-  color: #147b74;
 }
 
-.content .box1 .bookmark .circle {
+.content .box1 .bookmark .bookmarkicon {
   justify-self: flex-start;
   width: 56px;
   height: 56px;
@@ -308,13 +306,13 @@ p {
   text-align: center;
 }
 
-@media (max-width: 30rem) {
+@media (max-width: 37.5em) {
   .content .box1 .bookmark p {
     display: none;
   }
 }
 
-@media (max-width: 30rem) {
+@media (max-width: 37.5em) {
   .content .box1 .bookmark {
     width: 56px !important;
   }
@@ -322,13 +320,61 @@ p {
 
 .content .box2 {
   min-height: 12rem;
+  margin-bottom: 1.5rem;
+}
+
+.content .box2__head {
+  width: 100%;
+}
+
+@media (max-width: 37.5em) {
+  .content .box2__head {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.content .box2__headmain {
+  width: 32%;
+  border-right: 1px solid #D9D9D9;
+}
+
+@media (max-width: 37.5em) {
+  .content .box2__headmain {
+    width: unset;
+    min-height: 6rem;
+    border-right: none;
+    border-bottom: 1px solid #D9D9D9;
+  }
+}
+
+.content .box2__headmain span {
+  display: block;
+  width: 100%;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.content .box2 .progressbar {
+  height: 8px;
+  width: 100%;
+  border-radius: 4px;
+}
+
+.content .box2 .progressbar .progressfill {
+  background-color: #147b74;
 }
 
 .content .box3 {
   min-height: 74.75rem;
   padding-top: 40px;
   padding-bottom: 40px;
-  margin-top: 24px;
 }
 
 @media (max-width: 30rem) {
@@ -339,7 +385,6 @@ p {
 }
 
 .content .box3 .para {
-  color: #7a7a7a;
   line-height: 2;
   margin-top: 2rem;
 }
@@ -378,6 +423,7 @@ p {
 .content .box3 .pricingbox .pledge {
   color: #147b74;
   font-weight: 700;
+  cursor: pointer;
 }
 
 .content .box3 .pricingbox .price {
@@ -391,16 +437,24 @@ p {
   color: white;
 }
 
-.content .box3 .disabled {
-  opacity: 0.4;
-}
-
 .content .box3 .disabled .button {
   background-color: #7a7a7a;
 }
 
+.content .box3 .disabled .button:hover {
+  opacity: 1;
+}
+
+.content .box3 .disabled .pledge {
+  cursor: text;
+}
+
+.disabled {
+  opacity: 0.4;
+}
+
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0px;
   bottom: 0px;
   right: 0px;
@@ -448,5 +502,140 @@ p {
 
 .supportbox .gotit {
   width: 110px;
+}
+
+.mobilemenu::before {
+  opacity: 0.7;
+  background: -webkit-gradient(linear, left top, left bottom, from(black), to(transparent));
+  background: linear-gradient(black, transparent);
+}
+
+.backprojectoverlay {
+  min-height: 1200px;
+  position: absolute;
+  top: 8rem;
+}
+
+.backprojectoverlay h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.backprojectoverlay .backprojectmodal {
+  position: absolute;
+  max-width: 45.625rem;
+  width: 93%;
+  z-index: 11;
+  padding-top: 3.125rem;
+  padding-bottom: 2rem;
+  min-height: 910px;
+  background: white;
+}
+
+.backprojectoverlay .backprojectmodal .closemodal {
+  cursor: pointer;
+  position: absolute;
+  top: 2rem;
+  right: 1.875rem;
+}
+
+.backprojectoverlay .backprojectmodal .closemodal:hover path {
+  opacity: 1;
+}
+
+@media (max-width: 30rem) {
+  .backprojectoverlay .backprojectmodal .closemodal {
+    top: 2.25rem;
+  }
+}
+
+.backprojectoverlay .backprojectmodal .modalcontainer {
+  min-height: 860px;
+}
+
+@media (max-width: 30rem) {
+  .backprojectoverlay .backprojectmodal {
+    padding-top: 1.6rem;
+  }
+}
+
+.backprojectoverlay .backprojectmodal .backprojectmodalboxes {
+  min-height: 10rem;
+  margin-top: 1.8rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-right: 5%;
+  padding-left: 5%;
+  padding-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+@media (max-width: 37.5em) {
+  .backprojectoverlay .backprojectmodal .backprojectmodalboxes {
+    padding-top: 1.5rem;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .backprojectoverlay .backprojectmodal .backprojectmodalboxes .pl1 {
+    display: none;
+  }
+}
+
+.backprojectoverlay .backprojectmodal .backprojectmodalboxes .pl2 {
+  height: 3rem;
+  display: none;
+}
+
+@media (max-width: 37.5em) {
+  .backprojectoverlay .backprojectmodal .backprojectmodalboxes .pl2 {
+    display: block;
+  }
+}
+
+.backprojectoverlay .backprojectmodal .backprojectmodalboxes h4 {
+  padding-right: 0.7rem;
+}
+
+@media (max-width: 37.5em) {
+  .backprojectoverlay .backprojectmodal .backprojectmodalboxes h4 {
+    width: 100%;
+  }
+}
+
+.backprojectoverlay .backprojectmodal .backprojectmodalboxes .pricehead {
+  min-height: 4.5rem;
+}
+
+@media (max-width: 37.5em) {
+  .backprojectoverlay .backprojectmodal .backprojectmodalboxes .pricehead {
+    min-height: 3rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+.backprojectoverlay .backprojectmodal .backprojectmodalboxes .pledge {
+  color: #3cb4ac;
+  font-weight: 700;
+}
+
+.backprojectoverlay .backprojectmodal .backprojectmodalboxes .price {
+  font-weight: 700;
+  color: black;
+  font-size: 2rem;
+}
+
+.backprojectoverlay .backprojectmodal .backprojectmodalboxes .reward {
+  background-color: #147b74;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
